<resources>
    <string name="app_name">AppCategorias</string>
    <string name="categorias">Categorias</string>
    <string name="text_videos">Videos</string>
    <string name="text_musica">Musica</string>
    <string name="text_noticias">Noticias</string>
    <string name="text_investimentos">Investimentos</string>
    <string name="txt_noti">Noticias Do dia</string>
    <string name="ttt_notii">Familiares dos jovens desaparecidos há 12 dias após serem abordados por criminosos em um carro de aplicativo em Nova Iguaçu, na Baixada Fluminense, tentam identificar, nesta quarta-feira (24), um segundo corpo encontrado no Rio Capenga. Ele foi levado para o Instituto Médico-Legal (IML) da cidade. Agentes Delegacia de Homicídios da Baixada Fluminense e do Corpo de Bombeiros vão retomar as buscas pelos outros dois corpos às 9h. O Rio Capenga é usado por milicianos para ocultar os corpos de mortos pelo grupo criminoso. “O que aconteceu com eles foi uma maldade, uma crueldade, uma covardia que a gente vê acontecendo todo dia no nosso estado e no nosso país. Pessoas estão tirando a vida dos outros por nada. E elas tiram a vida porque sabem que vão ter outra oportunidade. Os familiares que perdem e não têm mais isso”, afirmou Adilson Gomes, irmão de Jhonatan, um dos desaparecidos.</string>
</resources>