<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_app_categorias"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_categorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/categorias"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/image_mobile"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/text_categorias" />

    <LinearLayout
        android:id="@+id/container_categorias"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_container_categorias"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_investimentos"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/cor_investimentos"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="20dp"
                        android:text="@string/text_investimentos"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:src="@drawable/image_invertimentos_category" />

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_noticias"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/cor_noticias"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="20dp"
                        android:text="@string/text_noticias"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:src="@drawable/image_noticias_category" />

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_musicas"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/cor_musicas"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="20dp"
                        android:text="@string/text_musica"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:src="@drawable/image_musicas_category" />

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_videos"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/cor_videos"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="20dp"
                        android:text="@string/text_videos"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:src="@drawable/image_videos_category" />

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>